--- a/Application.Web/Views/Pacientes/Index.cshtml
+++ b/Application.Web/Views/Pacientes/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Shared.ViewModels.PacienteViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista";
 }
 
-<h2>Index</h2>
+<h2>Pacientes Cadastrados</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <a class="btn btn-success" href=@Url.Action("NovoPaciente", "Pacientes")>Novo Paciente</a>
 </p>
 <table class="table">
     <tr>
@@ -21,6 +21,9 @@
             @Html.DisplayNameFor(model => model.DataNascimento)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Sexo)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Telefone)
         </th>
         <th>
@@ -30,28 +33,31 @@
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CPF)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DataNascimento)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Telefone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Nome)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.CPF)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.DataNascimento)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Sexo)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Telefone)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Email)
+    </td>
+    <td>
+        <a class="btn btn-primary" href=@Url.Action("AlterarPaciente", "Pacientes", new { id = item.CPF })>Editar</a>
+        <a class="btn btn-info" href=@Url.Action("VisualizarPaciente", "Pacientes", new { id = item.CPF })>Visualizar</a>
+        <a class="btn btn-danger" href=@Url.Action("ExcluirPaciente", "Pacientes", new { id = item.CPF })>Excluir</a>
+    </td>
+</tr>
 }
 
 </table>
