--- a/Application.Web/Views/Pacientes/ExcluirPaciente.cshtml
+++ b/Application.Web/Views/Pacientes/ExcluirPaciente.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Shared.ViewModels.PacienteViewModel
 
 @{
-    ViewBag.Title = "ExcluirPaciente";
+    ViewBag.Title = "Paciente";
 }
 
-<h2>ExcluirPaciente</h2>
+<h2>Excluir Cadastro</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que deseja excluir?</h3>
 <div>
     <h4>PacienteViewModel</h4>
     <hr />
@@ -36,6 +36,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Sexo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Sexo)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Telefone)
         </dt>
 
@@ -57,8 +65,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Excluir" class="btn btn-danger" />
+            <a class="btn btn-primary" href=@Url.Action("Index", "Pacientes")>Voltar</a>
         </div>
     }
 </div>
