--- a/Application.Web/Views/Pacientes/VisualizarPaciente.cshtml
+++ b/Application.Web/Views/Pacientes/VisualizarPaciente.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Shared.ViewModels.PacienteViewModel
 
 @{
-    ViewBag.Title = "VisualizarPaciente";
+    ViewBag.Title = "Paciente";
 }
 
-<h2>VisualizarPaciente</h2>
+<h2>Dados do Paciente</h2>
 
 <div>
-    <h4>PacienteViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -24,6 +23,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.CPF)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Sexo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Sexo)
         </dd>
 
         <dt>
@@ -52,7 +59,8 @@
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+<div class="col-md-offset-2 col-md-10">
+    <a class="btn btn-primary" href=@Url.Action("Index", "Pacientes")>Voltar</a>
+    <a class="btn btn-success" href=@Url.Action("AlterarPaciente", "Pacientes", new { id = Model.Id })>Editar</a>
+</div>
