--- a/Application.Web/Views/Home/Index.cshtml
+++ b/Application.Web/Views/Home/Index.cshtml
@@ -3,29 +3,27 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>MarkExams</h1>
+    <p class="lead">É um sistema desenvolvido pensando em agilizar o agendamento e marcação de consultas.</p>
+    <p><a href="https://www.linkedin.com/in/manoelgeraldo" class="btn btn-primary btn-lg">Saiba mais &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Pacientes</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Nesta seção, você pode adicionar, editar, excluir ou pesquisar todos os pacientes cadastrados.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href=@Url.Action("Index", "Pacientes")>Ver Mais &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Exames</h2>
+        <p>Conheça todos os exames disponíveis ou faça a adição, edição ou exclusão de exames.</p>
+        <p><a class="btn btn-default" href=@Url.Action("Index", "Exames")>Ver Mais &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Marcação de Consultas</h2>
+        <p>Realize nesta seção a marcação do exame, escolhendo o paciente, o tipo de exame, a data e a hora.</p>
+        <p><a class="btn btn-default" href=@Url.Action("Index", "TipoExames")>Ver Mais &raquo;</a></p>
     </div>
 </div>
