--- a/Application.Web/Views/TipoExames/Index.cshtml
+++ b/Application.Web/Views/TipoExames/Index.cshtml
@@ -4,12 +4,14 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Tipos de Exames Cadastrados</h2>
+<div class="row g-3">
+    <div class="col d-flex justify-content-start">
+        <h2 class="me-2">Tipos de Exames Cadastrados</h2>
+        <a class="btn btn-success m-2" href=@Url.Action("NovoTipo", "TipoExame")>Novo</a>
+    </div>
+</div>
 
-<p>
-    <a class="btn btn-success" href=@Url.Action("NovoTipo", "TipoExames")>Novo</a>
-</p>
-<table class="table">
+<table class="table table-hover table-responsive table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Tipo)
@@ -20,20 +22,21 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tipo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Descricao)
-        </td>
-        <td>
-            <a class="btn btn-primary" href=@Url.Action("AlterarTipo", "TipoExames", new { id = item.TipoExameId })>Editar</a>
-            <a class="btn btn-info" href=@Url.Action("VisualizarTipoExame", "TipoExames", new { id = item.TipoExameId })>Visualizar</a>
-            <a class="btn btn-danger" href=@Url.Action("Excluir", "TipoExames", new { id = item.TipoExameId })>Excluir</a>
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Tipo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Descricao)
+            </td>
+            <td>
+                <a class="btn btn-primary" href=@Url.Action("AlterarTipo", "TipoExames", new { id = item.TipoExameId })>Editar</a>
+                <a class="btn btn-info" href=@Url.Action("VisualizarTipoExame", "TipoExames", new { id = item.TipoExameId })>Visualizar</a>
+                <a class="btn btn-danger" href=@Url.Action("Excluir", "TipoExames", new { id = item.TipoExameId })>Excluir</a>
+            </td>
+        </tr>
+    }
 
 </table>
