--- a/Application.Web/Views/Pacientes/Index.cshtml
+++ b/Application.Web/Views/Pacientes/Index.cshtml
@@ -4,12 +4,14 @@
     ViewBag.Title = "Paciente";
 }
 
-<h2>Pacientes Cadastrados</h2>
+<div class="row g-3">
+    <div class="col d-flex justify-content-start">
+        <h2 class="me-2">Pacientes Cadastrados</h2>
+        <a class="btn btn-success m-2" href=@Url.Action("NovoPaciente", "Pacientes")>Novo</a>
+    </div>
+</div>
 
-<p>
-    <a class="btn btn-success" href=@Url.Action("NovoPaciente", "Pacientes")>Novo</a>
-</p>
-<table class="table">
+<table class="table table-hover table-responsive table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Nome)
