--- a/Application.Web/Views/Home/Index.cshtml
+++ b/Application.Web/Views/Home/Index.cshtml
@@ -24,6 +24,6 @@
     <div class="col-md-4">
         <h2>Marcação de Consultas</h2>
         <p>Realize nesta seção a marcação do exame, escolhendo o paciente, o tipo de exame, a data e a hora.</p>
-        <p><a class="btn btn-default" href=@Url.Action("Index", "TipoExames")>Ver Mais &raquo;</a></p>
+        <p><a class="btn btn-default" href=@Url.Action("Index", "Consultas")>Ver Mais &raquo;</a></p>
     </div>
 </div>
