--- a/Application.Web/Views/Exames/Index.cshtml
+++ b/Application.Web/Views/Exames/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="row g-3">
     <div class="col d-flex justify-content-start">
         <h2 class="me-2">Exames Cadastrados</h2>
-        <a class="btn btn-success m-2" href=@Url.Action("NovoExame", "Exame")>Novo</a>
+        <a class="btn btn-success m-2" href=@Url.Action("NovoExame", "Exames")>Novo</a>
     </div>
 </div>
 
