--- a/Application.Web/Views/Pacientes/VisualizarPaciente.cshtml
+++ b/Application.Web/Views/Pacientes/VisualizarPaciente.cshtml
@@ -38,7 +38,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DataNascimento)
+            @Html.DisplayFor(model => model.DataNascimento.Date)
         </dd>
 
         <dt>
@@ -59,7 +59,7 @@
 
     </dl>
 </div>
-
+<br />
 <p>
     <a class="btn btn-primary" href=@Url.Action("Index", "Pacientes")>Voltar</a>
     <a class="btn btn-success" href=@Url.Action("AlterarPaciente", "Pacientes", new { id = Model.PacienteId })>Editar</a>
