--- a/Application.Web/Views/Exames/NovoExame.cshtml
+++ b/Application.Web/Views/Exames/NovoExame.cshtml
@@ -23,11 +23,11 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.TipoExameId, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TipoExame, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("TipoExameId", string.Empty)
             @*@Html.EditorFor(model => model.TipoExame, new { htmlAttributes = new { @class = "form-control" } })*@
-            @Html.ValidationMessageFor(model => model.TipoExameId, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.TipoExame, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -39,7 +39,7 @@
             @Html.ValidationMessageFor(model => model.Observacao, "", new { @class = "text-danger" })
         </div>
     </div>
-
+    <br />
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <a class="btn btn-primary" href=@Url.Action("Index", "Exames")>Voltar</a>
