--- a/Application.Web/Views/Home/Contact.cshtml
+++ b/Application.Web/Views/Home/Contact.cshtml
@@ -1,17 +1,17 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contato";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
+    Entre contato<br />
     Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    <abbr title="Phone">Tel:</abbr>
+    (81) 9 9688-1750
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>LinkedIn:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <strong>GitHub:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
