--- a/Application.Web/Views/Pacientes/Index.cshtml
+++ b/Application.Web/Views/Pacientes/Index.cshtml
@@ -43,7 +43,7 @@
         @Html.DisplayFor(modelItem => item.CPF)
     </td>
     <td>
-        @Html.DisplayFor(modelItem => item.DataNascimento)
+        @Html.DisplayFor(modelItem => item.DataNascimento.Date)
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.Sexo)
