--- a/Application.Web/Views/Shared/_Layout.cshtml
+++ b/Application.Web/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">
+                        <a class="nav-link active" href=@Url.Action("Index", "Home")>
                             Home
                             <span class="visually-hidden">(current)</span>
                         </a>
@@ -33,15 +33,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href=@Url.Action("Index", "TipoExames")>Tipos de Exames</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href=@Url.Action("Index", "Consultas")>Consultas</a>
                     </li>
                 </ul>
                 <form class="d-flex">
