--- a/Application.Web/Views/TipoExames/Index.cshtml
+++ b/Application.Web/Views/TipoExames/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="row g-3">
     <div class="col d-flex justify-content-start">
         <h2 class="me-2">Tipos de Exames Cadastrados</h2>
-        <a class="btn btn-success m-2" href=@Url.Action("NovoTipo", "TipoExame")>Novo</a>
+        <a class="btn btn-success m-2" href=@Url.Action("NovoTipo", "TipoExames")>Novo</a>
     </div>
 </div>
 
