--- a/Application.Web/Views/Shared/_Layout.cshtml
+++ b/Application.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">MarkExams</a>
+            <a class="navbar-brand" href=@Url.Action("Index", "Home")>MarkExams</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -37,10 +37,6 @@
                         <a class="nav-link" href=@Url.Action("Index", "Consultas")>Consultas</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>
             </div>
         </div>
     </nav>
