--- a/Application.Web/Views/Consultas/VisualizarConsulta.cshtml
+++ b/Application.Web/Views/Consultas/VisualizarConsulta.cshtml
@@ -38,7 +38,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DataConsulta.Date)
+            @Html.DisplayFor(model => model.DataConsulta)
         </dd>
 
         <dt>
@@ -46,7 +46,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.HorarioConsulta.TimeOfDay)
+            @Html.DisplayFor(model => model.HorarioConsulta)
         </dd>
 
         <dt>
