--- a/Application.Web/Views/Pacientes/VisualizarPaciente.cshtml
+++ b/Application.Web/Views/Pacientes/VisualizarPaciente.cshtml
@@ -38,7 +38,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DataNascimento.Date)
+            @Html.DisplayFor(model => model.DataNascimento)
         </dd>
 
         <dt>
