--- a/Application.Web/Views/Consultas/AlterarConsulta.cshtml
+++ b/Application.Web/Views/Consultas/AlterarConsulta.cshtml
@@ -44,7 +44,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataConsulta, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DataConsulta, new { htmlAttributes = new { @class = "form-control"} })
+                @Html.EditorFor(m => m.DataConsulta, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DataConsulta, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -68,4 +68,6 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+
+    <script src="~/Scripts/methods_pt.js"></script>
 }
