--- a/Application.Web/Views/Consultas/Excluir.cshtml
+++ b/Application.Web/Views/Consultas/Excluir.cshtml
@@ -39,7 +39,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DataConsulta.Date)
+            @Html.DisplayFor(model => model.DataConsulta)
         </dd>
 
         <dt>
@@ -47,7 +47,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.HorarioConsulta.TimeOfDay)
+            @Html.DisplayFor(model => model.HorarioConsulta)
         </dd>
 
         <dt>
