--- a/Application.Web/Views/Pacientes/Excluir.cshtml
+++ b/Application.Web/Views/Pacientes/Excluir.cshtml
@@ -31,7 +31,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DataNascimento.Date)
+            @Html.DisplayFor(model => model.DataNascimento)
         </dd>
 
         <dt>
