Alert de Consulta agendada caso haja outra na mesma data e hora.

--- a/Application.Web/Views/Shared/_Layout.cshtml
+++ b/Application.Web/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
         </div>
     </nav>
     <div class="container body-content">
+        @Html.Partial("_Notifications")
         @RenderBody()
         <hr />
         <footer>
