--- a/Application.Web/Views/Consultas/NovaConsulta.cshtml
+++ b/Application.Web/Views/Consultas/NovaConsulta.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Paciente.CPF, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("PacienteId", string.Empty)
+                @Html.EditorFor(model => model.Paciente.CPF, new { htmlAttributes = new { @class = "cpf form-control" } })
                 @*@Html.EditorFor(model => model.Paciente.CPF, new { htmlAttributes = new { @class = "cpf form-control" } })*@
                 @Html.ValidationMessageFor(model => model.Paciente.CPF, "", new { @class = "text-danger" })
             </div>
