--- a/Application.Web/Views/Shared/_Layout.cshtml
+++ b/Application.Web/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/jquerymask")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
