--- a/Application.Web/Views/Consultas/AlterarConsulta.cshtml
+++ b/Application.Web/Views/Consultas/AlterarConsulta.cshtml
@@ -17,8 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Paciente.CPF, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("PacienteId", string.Empty)
-                @*@Html.EditorFor(model => model.Paciente.CPF, new { htmlAttributes = new { @class = "cpf form-control" } })*@
+                @Html.EditorFor(model => model.Paciente.CPF, new { htmlAttributes = new { @class = "cpf form-control" } })
                 @Html.ValidationMessageFor(model => model.Paciente.CPF, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -26,8 +25,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TipoExame.Tipo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("TipoExameId", string.Empty)
-                @*@Html.EditorFor(model => model.TipoExameId, new { htmlAttributes = new { @class = "form-control" } })*@
+                @if (ViewBag.ListaTipos != null)
+                {
+                    @Html.DropDownListFor(model => model.TipoExameId, ViewBag.ListaTipos as SelectList, "- Selecione -", new { @class = "form-control" })
+                }
                 @Html.ValidationMessageFor(model => model.TipoExame.Tipo, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -35,8 +36,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Exame.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ExameId", string.Empty)
-                @*@Html.EditorFor(model => model.ExameId, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.DropDownListFor(model => model.ExameId, new SelectList(" "), "- Selecione -", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Exame.Nome, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -44,7 +44,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataConsulta, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(m => m.DataConsulta, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DataConsulta, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DataConsulta, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -68,6 +68,53 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jquerymask")
+    @Scripts.Render("~/bundles/jqueryui")
 
-    <script src="~/Scripts/methods_pt.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $("#PacienteCPF").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        url: '/Consultas/ListaCPF',
+                        data: "{'prefix': '" + request.term + "'}",
+                        dataType: "json",
+                        type: "POST",
+                        contentType: "application/json; charset=utf-8",
+                        success: function (data) {
+                            response($.map(data, function (item) {
+                                return {
+                                    label: item['label'],
+                                    pacienteId: item['value']
+                                }
+                            }))
+                        },
+                        error: function (response) {
+                            alert(response.responseText);
+                        },
+                        failure: function (response) {
+                            alert(response.responseText);
+                        }
+                    });
+                },
+                select: function (e, i) {
+                    $("#PacienteId").val(i.item.pacienteId);
+                },
+                minLength: 1
+            });
+        });
+
+        $(document).ready(function () {
+            $("#TipoExameId").change(function () {
+                $.get("/Consultas/ListaExame", { TipoExameId: $("#TipoExameId").val() },
+                    function (data) {
+                        $("#ExameId").empty();
+                        $.each(data, function (index, row) {
+                            $("#ExameId").append("<option value='" + row.ExameId + "'>" + row.Nome + "</option>")
+                        });
+                    });
+            })
+        });
+    </script>
 }
+
