--- a/Application.Web/Views/Exames/NovoExame.cshtml
+++ b/Application.Web/Views/Exames/NovoExame.cshtml
@@ -25,8 +25,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.TipoExame, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("TipoExameId", string.Empty)
-            @*@Html.EditorFor(model => model.TipoExame, new { htmlAttributes = new { @class = "form-control" } })*@
+            @Html.DropDownListFor(model => model.TipoExameId, ViewBag.ListaTipo as SelectList, "- Selecione -", new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.TipoExame, "", new { @class = "text-danger" })
         </div>
     </div>
